1998-06-01  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/SYSTEM.NOTES: advise Linux users to use dump without
 	setuid/setgid

	* docs/INDEXING: update dumptype syntax

1998-05-29  John R. Jackson  <jrj@purdue.edu>

	* server-src/amindexd.c (uncompress_file, process_ls_dump,
	build_disk_table, is_dir_valid_opaque, opaque_ls): fix file
	descriptor leak, log the amadmin find command, fix error reporting
	from routines that do not generate system errors.
	* common-src/amanda.h: make sure errno is saved through amfree().

1998-05-28  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/SYSTEM.NOTES: GNU tar must be patched on HP/UX.
	* patches/tar-1.12.patch: ditto.

	* server-src/taper.c (endtape): do not log amount of used tape after 
	entering degraded mode.

	* client-src/sendsize.c (getsize_dump): pass at least argv[0] to
 	killpgrp.

1998-05-28  Paul R. Johnson  <prj@mit.edu>

	* client-src/sendbackup.c (check_status): when checking whether
	return status 1 is valid for dump, make sure it was *not* tar that
	was running.

1998-05-28  Tom Lear <toml@accesscom.com>, John R. Jackson  <jrj@purdue.edu>

	* man/amcheck.8.in: document new -Maddress command line flag.
	* server-src/amcheck.c (usage, main): add -Maddress command line
	flag to send mail to a specific address instead of mailto from
	amanda.conf.

1998-05-27  John R. Jackson  <jrj@purdue.edu>

	* man/amrestore.8: update for host/disk/date triplets.
	* recover-src/extract_list.c (extract_files_setup): pass datestamp
	argument in new position and without -d.
	* restore-src/amidxtaped.c (main): remove -d checks.
	* restore-src/amrestore.c (restore, usage, main): fix file descriptor
	leak, move datestamp to host/disk triplet and allow all to be repeated.

1998-05-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/killpgrp.c (main): wait for either SIGTERM or EOF on
	stdin.

	* client-src/sendsize.c (getsize_dump): close the other end of
 	killpgrp's stdin pipe before trying to kill it, because we just